unpackaged/main/default/objects/Activity/fields/litify__lp_Activity_Sidecar__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Activity_Sidecar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Sidecar</label>
    <referenceTo>litify__lp_Activity_Sidecar__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>lp_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>