unpackaged/main/default/objects/Activity/fields/litify_docs__Docrio_Error__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Docrio_Error__c</fullName>
    <description>Store any error messages during the sync process.</description>
    <label>Docrio Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>