unpackaged/main/default/objects/Activity/fields/litify_docs__Docrio_External_ID__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Docrio_External_ID__c</fullName>
    <description>Stores a unique identifier from an external system.</description>
    <externalId>true</externalId>
    <label>Docrio External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>