unpackaged/main/default/objects/Activity/fields/litify_docs__Docrio_Override_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Docrio_Override_Source__c</fullName>
    <description>This field is used when a login disruption occurs on the Docrio Email / Calendar add-in. In such cases, events will sync using the override event source instead of the original Docrio source.</description>
    <inlineHelpText>This applies only when a login disruption occurs. In such cases, events will sync using the override event source instead of the original Docrio source.</inlineHelpText>
    <label>Docrio Override Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Litify</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>