unpackaged/main/default/objects/Activity/fields/litify_docs__Docrio_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Docrio_Source__c</fullName>
    <description>For use with synced events to determine if they originated in Salesforce or Outlook</description>
    <inlineHelpText>Originating source of this event.</inlineHelpText>
    <label>Docrio Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Litify</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>