unpackaged/main/default/objects/Activity/fields/litify_ext__Appointment_Holder__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Appointment_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Holder</label>
    <referenceTo>litify_ext__Appointment_Holder__c</referenceTo>
    <relationshipLabel>Investigations</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>