unpackaged/main/default/objects/Activity/fields/litify_ext__Event_Memo__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Event_Memo__c</fullName>
    <label>Event Memo</label>
    <type>TextArea</type>
</CustomField>