unpackaged/main/default/objects/Activity/fields/litify_ext__Event_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Event_Time__c</fullName>
    <label>Event Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>