unpackaged/main/default/objects/Activity/fields/litify_pm__AssigneeName__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__AssigneeName__c</fullName>
    <formula>Owner:User.FirstName+ &#39; &#39; +  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Name</label>
    <type>Text</type>
</CustomField>