unpackaged/main/default/objects/Activity/fields/litify_pm__AssociatedObjectName__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__AssociatedObjectName__c</fullName>
    <label>Associated Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>