unpackaged/main/default/objects/Activity/fields/litify_pm__Billable__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>