unpackaged/main/default/objects/Activity/fields/litify_pm__CalendarRulesDoNotRecalculate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__CalendarRulesDoNotRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calendar Rules flag where, if checked, this event should not be recalculated when a parent is recalculated.</description>
    <label>Do Not Recalculate</label>
    <type>Checkbox</type>
</CustomField>