unpackaged/main/default/objects/Activity/fields/litify_pm__CalendarRulesJurisdictionSystemID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__CalendarRulesJurisdictionSystemID__c</fullName>
    <description>The Calendar Rules id of the jurisdiction the event is related to</description>
    <label>Calendar Rules Jurisdiction System ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>