unpackaged/main/default/objects/Activity/fields/litify_pm__CalendarRulesParentSystemID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__CalendarRulesParentSystemID__c</fullName>
    <description>The ParentSystemID of the parent Calendar Rules event, if any. This ID is not unique within salesforce. To retrieve the parent event, get the event who&#39;s SystemID is equal to this ParentSystemID and who&#39;s CalendarRulesTrigger is this event&#39;s CalendarRulesTrigger.</description>
    <label>Calendar Rules Parent System ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>