unpackaged/main/default/objects/Activity/fields/litify_pm__CalendarRulesSystemID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__CalendarRulesSystemID__c</fullName>
    <description>The SystemID of the calendar event assigned by CalendarRules</description>
    <label>Calendar Rules System ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>