unpackaged/main/default/objects/Activity/fields/litify_pm__CalendarRulesTrigger__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__CalendarRulesTrigger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The CalendarRuesTrigger that this event is for</description>
    <label>Calendar Rules Trigger</label>
    <referenceTo>litify_pm__CalendarRulesTrigger__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>