unpackaged/main/default/objects/Activity/fields/litify_pm__ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__ChangeReason__c</fullName>
    <description>Capture reason for change on Events of type CalendarRule to populate the log</description>
    <inlineHelpText>Capture reason for change on Events of type CalendarRule to populate the log</inlineHelpText>
    <label>Change Reason</label>
    <type>TextArea</type>
</CustomField>