unpackaged/main/default/objects/Activity/fields/litify_pm__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>