unpackaged/main/default/objects/Activity/fields/litify_pm__Default_Matter_Task__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Default_Matter_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Matter Task</label>
    <referenceTo>litify_pm__Default_Matter_Task__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>