unpackaged/main/default/objects/Activity/fields/litify_pm__DefaultMatterTaskType__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__DefaultMatterTaskType__c</fullName>
    <formula>litify_pm__Default_Matter_Task__r.litify_pm__Task_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Matter Task Type</label>
    <type>Text</type>
</CustomField>