unpackaged/main/default/objects/Activity/fields/litify_pm__Document_Link__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Document_Link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>