unpackaged/main/default/objects/Activity/fields/litify_pm__DueDateDoNotRecalculate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__DueDateDoNotRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to limit recalculation of the Due Date for Tasks and should be hidden to the end-user.</description>
    <label>Do Not Recalculate Due Date</label>
    <type>Checkbox</type>
</CustomField>