unpackaged/main/default/objects/Activity/fields/litify_pm__Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Duration__c</fullName>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>