unpackaged/main/default/objects/Activity/fields/litify_pm__Estimated_Time_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Time_Value__c</fullName>
    <label>Estimated Time Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>