unpackaged/main/default/objects/Activity/fields/litify_pm__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Meeting</fullName>
            </value>
            <value>
                <fullName>Deposition</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>