unpackaged/main/default/objects/Activity/fields/litify_pm__EventLogJunction__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__EventLogJunction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to logs for Events</description>
    <inlineHelpText>Lookup to logs for Events</inlineHelpText>
    <label>Event Change Log</label>
    <referenceTo>litify_pm__EventLogJunction__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>