unpackaged/main/default/objects/Activity/fields/litify_pm__In_Task_Set__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__In_Task_Set__c</fullName>
    <description>Signify that Task is a component of a Matter Stage Task Set</description>
    <formula>litify_pm__Default_Matter_Task__r.litify_pm__Matter_Stage__r.litify_pm__Task_Set__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Signify that Task is a component of a Matter Stage Task Set</inlineHelpText>
    <label>In Task Set</label>
    <type>Checkbox</type>
</CustomField>