unpackaged/main/default/objects/Activity/fields/litify_pm__lit_Color__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>red</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>orange</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>green</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>blue</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>purple</fullName>
                <label>Purple</label>
            </value>
            <value>
                <fullName>gray</fullName>
                <label>Gray</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>