unpackaged/main/default/objects/Activity/fields/litify_pm__lit_Color_Icon__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Color_Icon__c</fullName>
    <formula>IF(ISBLANK(TEXT(litify_pm__lit_Color__c)), &quot;&quot;, IMAGE(&quot;/resource/litify_pm__TaskIcons/&quot; + TEXT(litify_pm__lit_Color__c) + &quot;.svg&quot;, TEXT(litify_pm__lit_Color__c), 32, 32))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Icon</label>
    <type>Text</type>
</CustomField>