unpackaged/main/default/objects/Activity/fields/litify_pm__Matter_Stage_Activity__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Stage_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Stage Activity</label>
    <referenceTo>litify_pm__Matter_Stage_Activity__c</referenceTo>
    <relationshipLabel>Stage Tasks</relationshipLabel>
    <relationshipName>Stage_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>