unpackaged/main/default/objects/Activity/fields/litify_pm__MatterStage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__MatterStage__c</fullName>
    <formula>litify_pm__Matter_Stage_Activity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Stage</label>
    <type>Text</type>
</CustomField>