unpackaged/main/default/objects/Activity/fields/litify_pm__OriginalDate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__OriginalDate__c</fullName>
    <description>The Date that was originally assigned to this event by Calendar Rules. Used to determine if the date was updated locally or not.</description>
    <label>Original Date</label>
    <type>DateTime</type>
</CustomField>