unpackaged/main/default/objects/Activity/fields/litify_pm__Parent__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean for Events of type CalendarRule to indicate when a record has dependencies</description>
    <inlineHelpText>Boolean for Events of type CalendarRule to indicate when a record has dependencies</inlineHelpText>
    <label>Parent</label>
    <type>Checkbox</type>
</CustomField>