unpackaged/main/default/objects/Activity/fields/litify_pm__Parent_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Parent_Task_Id__c</fullName>
    <description>The Id of task used to calculate this task&#39;s due date.</description>
    <label>Parent Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>