unpackaged/main/default/objects/Activity/fields/litify_pm__UserRoleRelatedJunction__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__UserRoleRelatedJunction__c</fullName>
    <description>Junction of the User Id, default matter task&#39;s role Id, and what id. Used when mass-updating task assignees related to matters.</description>
    <formula>OwnerId + &#39;;&#39; + litify_pm__Default_Matter_Task__r.litify_pm__Matter_Team_Role__c + &#39;;&#39; + WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role Related Junction</label>
    <type>Text</type>
</CustomField>